Fri Jan 28 18:17:08 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/Configuration.h (struct ConfigDefaults): Add version and
	category fields for more accurate documentation.

	* htcommon/defaults.cc: Add blank category fields and start
	filling in version field. Killed modification_time_is_now_attribute.

	* htdig/Document.cc (Document): Kill attribute
	modification_time_is_now since it can cause more harm than good. 
	
	* htnet/HtHTTP.cc (ParseHeader): Ditto.	

	* htdoc/cf_generate.pl: Added support for new version and category
	fields. Currently category does nothing, but it could split the
	documentation into categories.

Sat Jan 29 01:37:45 2000  Loic Dachary  <loic@ceic.com>

	* .version: remove the trailing -dev

Thu Jan 27 12:22:57 2000  Loic Dachary  <loic@ceic.com>

	* htword/WordList.cc: cdebug replaced by cerr. replace lverbose
	  by verbose > 2. Remove shutup. 
	  (WordList): monitor = 0
	  (Open): create monitor only if wordlist_monitor = true
	  (Close): delete monitor if set, delete compressor if set

	* htword/WordDBCompress.cc,WordList.cc: only activate monitoring code
	  if monitor is set. No interaction with the monitor is therefore possible
	  if wordlist_monitor is false.

	* htword/WordMonitor.cc: remove useless test of wordlist_monitor (done by
	  WordList now).

	* htword/WordDBCompress.cc (TestCompress): remove redundant debuglevel argument.

	* htword/WordDBCompress.cc (WordDBCompress): init cmprInfo to 0

	* db/include/db_cxx.h: Add get_mp_cmpr_info method

	* htword/WordDBCompress.cc (WordDBCompress): set default debug level to 0

	* htword/WordDB.h: CmprInfo returns current CmprInfo and non static,
	  overload to set CmprInfo if argument given.

	* htword/WordDBCompress.h: new CmprInfo() method returns DB_CMPR_INFO object
	  for Berkeley DB database.

	* htword/WordList.h: add compressor member, kill cmprInfo member.

	* htword/WordList.cc: 

Wed Jan 26 20:05:33 2000  Loic Dachary  <loic@ceic.com>
