@@ -1,3 +1,8 @@
+Sat Jan 29 05:34:26 2000  Loic Dachary  <loic@ceic.com>
+
+	* htword/WordKey.h (UnpackNumber): Very nasty bug. Optimization
+	  dated Dec 29 broke endianess on Solaris. Restore previous version.
+
 Fri Jan 28 18:17:08 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>
 
 	* htlib/Configuration.h (struct ConfigDefaults): Add version and
